# look

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.docker/: .env.example  Dockerfile  compose.yml  docker-compose.yml
.github/workflows/: docker-build-push.yml
app/: __init__.py  cli.py  database.py
app/api/: __init__.py  lifespan.py  util.py
app/api/route/: __init__.py  exceptions.py  messages.py  util.py
app/api/route/auth/: __init__.py  api_key.py  config.py  init_data.py
app/api/route/dependencies/: __init__.py  auth.py  database.py  pagination.py
app/api/route/exceptions/: __init__.py  handlers.py
app/api/route/middlewares/: __init__.py
app/api/route/util/: __init__.py  dependencies.py  responses.py
app/api/route/util/internal/: pagination.py
app/api/route/v1/: __init__.py  auth.py  catalog.py  collection.py  dev.py  feature.py  image.py  interaction.py  user.py
app/api/schema/: __init__.py  search.py
app/core/: config.py  exceptions.py
app/model/: __init__.py  catalog.py  collection.py  interaction.py  misc.py  user.py
app/service/: __init__.py  catalog.py  collection.py  interaction.py  product.py  token.py  user.py  util.py
app/service/search/: __init__.py  client.py  config.py  indices.py  util.py
app/util/: lock.py
bot/: __init__.py  bot.py  cli.py  config.py  handlers.py  webhook.py
deploy/: .env.example  Dockerfile  app.Dockerfile  bot.Dockerfile  compose.dev.yml  compose.yml
