[project]
name = "look"
version = "0.1.0"
description = "Backend for a clothing marketplace"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]<3.13",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.121.0",
    "logfire[fastapi,sqlalchemy,system-metrics]>=4.14.2",
    "pydantic<2.12",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    {include-group = "app"},
    {include-group = "bot"},
]
app = [
    "asyncpg>=0.30.0",
    "elasticsearch[async]>=9.2.0",
    "init-data-py>=0.2.6",
    "orjson>=3.11.4",
    "pg-async-events>=0.1.2",
    "sqlmodel>=0.0.27",
]
bot = [
    "aiogram[fast]>=3.22.0",
]


[tool.logfire]
ignore_no_config = true


[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "A", # flake8-builtins (builtin name shadowing)
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B", # flake8-bugbear (common bug causes)
    "C4", # flake8-comprehensions
    "COM", # flake8-commas
    "D", # pydocstyle
    "DTZ", # flake8-datetimez
    "E", # pycodestyle
    "EXE", # flake8-executable
    "F", # pyflakes
    "FA", # flake8-future-annotations
    "FAST", # FastAPI
    "FBT", # flake8-boolean-trap (disallow boolean positional arguments)
    "FLY", # pyflint
    "FURB", # refurb (use new language features)
    "G", # flake8-logging-format
    "I", # isort (imports)
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N", # pep8-naming
    "PERF", # perflint
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # ruff-specific
    "S", # flake8-bandit (security)
    "SIM", # flake8-simpify
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "T100", # flake8-debugger
    "TRY", # tryceratops
    "UP", # pyupgrade (disallow deprecated language features)
    "W", # pycodestyle
    "YTT", # flake8-2020
]
ignore = [
    "COM812", # redundant because of ruff format
    "D1", # allow undocumented entities
    "D212", # prefer D213 instead (google doc style override)
    "D405", # section names don't have to be capitalized
    "PLR09", # disable complexity warnings
]
extend-select = [
    "D213", # multi-line docstring summary should start at the second line
]
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101",  # allow asserts
    "S311",  # allow random
    "ANN",   # allow missing annotations
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"
